domoticz/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: domoticz
  labels:
    app: domoticz
spec:
  selector:
    app: domoticz
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
