domoticz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
      nginx.mortylabs.com
    http:
      paths:
      - path: "/nginx"
        pathType: Prefix
        backend:
          service:
            name: abc
            port: 
              number: 80
